RESOLVED FIXED231592
Fix grid-auto-repeat-dynamic-003.html
https://bugs.webkit.org/show_bug.cgi?id=231592
Summary Fix grid-auto-repeat-dynamic-003.html
Rob Buis
Reported 2021-10-12 10:23:32 PDT
Fix grid-auto-repeat-dynamic-001.html.
Attachments
Patch (3.22 KB, patch)
2021-10-12 10:25 PDT, Rob Buis
no flags
Patch (3.59 KB, patch)
2021-10-13 06:33 PDT, Rob Buis
no flags
Rob Buis
Comment 1 2021-10-12 10:25:31 PDT
Rob Buis
Comment 2 2021-10-12 12:35:23 PDT
@zalan I took your proposed patch from https://bugs.webkit.org/show_bug.cgi?id=152588 as a possible fix for this WPT test. Do you have (new) thoughts on the viability of that patch? Will be interesting to see if this shows up green (including Debug).
alan
Comment 3 2021-10-12 19:26:42 PDT
oh wow, straight from 1st of Jan, 2016.
Rob Buis
Comment 4 2021-10-13 06:33:05 PDT
EWS
Comment 5 2021-10-14 23:24:41 PDT
Committed r284235 (243044@main): <https://commits.webkit.org/243044@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 441067 [details].
Radar WebKit Bug Importer
Comment 6 2021-10-14 23:25:16 PDT
Note You need to log in before you can comment on or make changes to this bug.