Fix grid-auto-repeat-dynamic-003.html https://bugs.webkit.org/show_bug.cgi?id=231592

Patch by Rob Buis <rbuis@igalia.com> on 2021-10-14
Reviewed by Alan Bujtas.

Source/WebCore:

Also call dirtyForLayoutFromPercentageHeightDescendants when laying out inline children, since
they may have a percentage height dependency as well as grid-auto-repeat-dynamic-003.html shows.

Test: imported/w3c/web-platform-tests/css/css-grid/grid-definition/grid-auto-repeat-dynamic-003.html

* rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::layoutBlock):
(WebCore::RenderBlockFlow::layoutBlockChildren):

LayoutTests:

* TestExpectations:

Canonical link: https://commits.webkit.org/243044@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284235 268f45cc-cd09-0410-ab3c-d52691b4dbfc